# claude-scraper-agent

./: .gitignore  .scraper-dev.example.md  AGENT_VALIDATION_FIX.md  BA_ADDITIONAL_FUNCTIONALITY.md  BA_AGENT_FLOW.md  BA_AGENT_LANGSMITH.md  BA_TODO.md  BA_VALIDATOR_FIXES_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  ENDPOINT_QA_FIXES.md  INSTALLATION.md  INSTALLATION_GUIDE.md  LANCEDB_INFRASTRUCTURE.md  LEGACY_CODE_REMOVAL_SUMMARY.md  MIGRATION_STATUS.md  PROJECT_SUMMARY.md  QA_FIXES_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SCRAPER_GEN_NEXT_STEPS.md  SCRAPER_SENTRY.md  WEEK1_PAIR2_COMPLETION.md  analyze_profiling_log.py  install-infrastructure.sh  install.sh  mypy.ini  pyproject.toml  run_generator.py  test_full_analysis.py  test_phase2.py  uninstall.sh  verify_endpoint_qa_fixes.py  verify_fixes.py
.claude/: ralph-loop.local.md
.claude-plugin/: README.md  marketplace.json
.claude/hooks/: PostToolUse.sh  README.md
agentic_scraper/: __init__.py  infrastructure_manager.py
agentic_scraper/agents/: __init__.py  ba_executive_summary_generator.py  endpoint_qa.py
agentic_scraper/business_analyst/: MIGRATION_SUMMARY.md  __init__.py  cli.py  config.py  graph.py  output.py  state.py  tools.py  tracing.py
agentic_scraper/cli/: __init__.py
agentic_scraper/fixers/: __init__.py  fixer.py  updater.py
agentic_scraper/generators/: __init__.py  hybrid_generator.py  orchestrator.py  (+2 more)
api_validation_tests/: test_10_get_no_auth.txt  test_1_get_no_auth.txt  test_2_get_no_auth.txt  test_3_get_no_auth.txt  test_4_get_no_auth.txt  test_5_get_no_auth.txt  test_6_get_no_auth.txt  test_7_get_no_auth.txt  test_8_get_no_auth.txt  test_9_get_no_auth.txt
baml_client/: __init__.py  async_client.ts  async_request.ts  inlinedbaml.ts  parser.ts  partial_types.ts  sync_client.ts  sync_request.ts  type_builder.ts  types.ts
baml_src/: ba_analyzer.baml  ba_collator.baml  ba_validator.baml  clients.baml  generator.baml  scraper_generator.baml  types.baml
claude_scraper/: infrastructure_manager.py
commons/: collection_framework.py  logging_json.py
datasource_analysis/: ba_validation_report.json  phase0_detection.json  phase1_documentation.json  phase2_tests.json  validated_datasource_spec.json
examples/: simple_analysis.py
infrastructure/: README.template.md  collection_framework.py  hash_registry.py  kafka_utils.py  logging_json.py  pyproject.toml.template  s3_utils.py
plugin/: plugin.json
sourcing/: __init__.py  exceptions.py
test_e2e_output/: test_ba_spec.json
tests/: conftest.py  test_ba_analyzer.py  test_ba_collator.py  test_ba_integration.py  test_ba_validator.py  test_cli.py  test_cli_config.py  test_cli_utils.py  test_end_to_end_integration.py  test_endpoint_qa.py  test_fixer.py  test_hash_registry.py  test_hybrid_generator.py  test_infra_paths.py  test_integration.py  test_kafka_utils.py  test_link_scoring.py  test_llm_factory_new.py  test_llm_providers.py  test_orchestration.py  test_orchestrator.py  test_repository.py  test_s3_utils.py  test_template_renderer.py  test_updater.py  test_variable_transformer.py
(+191 files in other folders)
